<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Добро пожаловать в игру!</string>
    <string name="bt_start">Начать</string>
    <string name="tv_choose_level">Выберите Уровень:</string>
    <string name="bt_test_level">Тестовый</string>
    <string name="bt_easy_level">Легкий</string>
    <string name="bt_normal_level">Нормальный</string>
    <string name="bt_hard_level">Сложный</string>
    <string name="tv_question">\?</string>
    <string name="tv_count_right_answers">Правильных ответов %s (минимум %s)</string>
    <string name="tv_min_right_answers">Минимальное количество правильных ответов %s</string>
    <string name="tv_right_answers">Правильных ответов %s</string>
    <string name="tv_finish">FINISH!</string>
    <string name="bt_finish">Попробовать снова</string>
</resources>